--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 .square {
   display: inline-block;
-  color:aquamarine;
+  color: aquamarine;
   border: 1px solid blue;
   width: 5rem;
   height: 5rem;
