--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.row {
+  font-size: 0;
 }
 
 .square {
   display: inline-block;
-  color: aquamarine;
-  border: 1px solid blue;
+  background-color: aquamarine;
   width: 5rem;
   height: 5rem;
+}
+
+.hovered {
+  background-color: hsl(240, 100%, 75%);
 }
