--- a/style.css
+++ b/style.css
@@ -4,6 +4,27 @@
   padding: 0;
 }
 
+body {
+  min-width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  margin-bottom: 1em;
+}
+
+button {
+  font-size: 1.75rem;
+  margin-bottom: 1em;
+  padding: 0.5rem 1.5rem;
+  border: 3px solid hsl(240, 100%, 75%);
+  border-radius: 1rem;
+}
+
 .container {
   width: 40rem;
   height: 40rem;
